[package]
name = "runner-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version= "1.1.6", features = ["behavior-version-latest"] }
aws-sdk-sqs = "1.14.0"
tokio = { version = "1", features = ["full"] }
dotenvy ={ version = "0.15.7"}
serde = { version = "1.0.197", features = ["derive"] }
config = "0.14.0"
once_cell = "1.19.0"
reqwest = {version = "0.11.24", features = ["blocking", "cookies", "json"]}
serde_json = "1.0.114"
anyhow = "1.0.80"
